Fix issues on mobile/small resulutions

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -76,7 +76,7 @@ button.login, button.logout {
 /* Item sections */
 section.item {
 	width: 200px;
-	height: 17%;
+	height: 17%; 
 	padding: 16px;
 	box-shadow: 2px 2px 4px #dedede;
 	border: 1px solid #888;
@@ -84,19 +84,63 @@ section.item {
 	float: left;
 }
 
+@media screen and (max-height: 850px) {
+	section.item {
+		height: 20%;
+	}
+}
+@media screen and (max-height: 750px) {
+	section.item {
+		height: 25%;
+	}
+}
+@media screen and (max-height: 590px) {
+	section.item {
+		height: 30%;
+	}
+}
+@media screen and (max-height: 500px) {
+	section.item {
+		height: 35%;
+	}
+}
+@media screen and (max-height: 430px) {
+	section.item {
+		height: 45%;
+	}
+}
+@media screen and (max-height: 350px) {
+	section.item {
+		height: 60%;
+	}
+}
+
 section.item.claimed {
 	background-color: #888;
 	opacity: 0.4;
 }
 
-section.item div.text {
-	padding: 0.5em 0 1em 0;
+section.item div.title {
+	width: 100%;
+	height: 30%;
+	float: left;
+}
+
+
+section.item div.title h3{
+	margin: 0;
+	padding: 0;
+	font-size: 1em;
+}
+
+section.item div.price {
+	padding: 2em 0 0.5em 0;
 	width: 50%;
 	float: left;
 }
 
 section.item div.image {
-	height: 100%;
+	height: 70%;
 	width: 50%;
 	float: right;
 }
@@ -113,7 +157,8 @@ section.item div span {
 }
 
 section.item img.thumb {
-	width: 100%;
+	max-width: 100%;
+	max-height: 100%;
 }
 
 section.item button.unclaim, 
